fix(coppa): better align error message in pop up

--- a/packages/fxa-content-server/app/styles/_media_queries.scss
+++ b/packages/fxa-content-server/app/styles/_media_queries.scss
@@ -102,6 +102,10 @@ only screen and (orientation:landscape) and (min-width:481px) and (max-height:48
     height: 225px;
   }
 
+  .cannot-create-account-content {
+    margin-top: 30px;
+  }
+
   .marketing {
     margin: 20px -20px -10px -20px;
 
